<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/bottom_nav_home_title"
        android:icon="@drawable/bottom_navigation_home_icon_selector"/>
    <item
        android:id="@+id/notificationFragment"
        android:title="@string/bottom_nav_notification_title"
        android:icon="@drawable/bottom_navigation_notification_icon_selector"/>
    <item
        android:id="@+id/calendarFragment"
        android:title="@string/bottom_nav_calender_title"
        android:icon="@drawable/bottom_navigation_calendar_icon_selector"/>
    <item
        android:id="@+id/userInfoFragment"
        android:title="@string/bottom_nav_userinfo_title"
        android:icon="@drawable/bottom_navigation_userinfo_icon_selector"/>
</menu>