<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.AddScheduleActivity">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageButton
                    android:id="@+id/backCalendarBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:background="@color/colorPrimary"
                    android:src="@drawable/ic_baseline_close_24"/>
                <TextView
                    android:id="@+id/tvToolbarTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/add_schedule_activity_title"
                    android:textColor="@color/black"/>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="26dp">
            <LinearLayout
                android:id="@+id/dateLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">
                <ImageButton
                    android:id="@+id/datePickerBtn"
                    android:src="@drawable/ic_date_picker_icon"
                    android:background="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:id="@+id/dateTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="8dp"
                    android:gravity="center_vertical"
                    android:hint="@string/date_picker_hint"/>
            </LinearLayout>
            <EditText
                android:id="@+id/addTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:maxLines="1"
                android:ellipsize="end"
                android:padding="16dp"
                android:textSize="16sp"
                android:layout_marginBottom="16dp"
                android:hint="@string/title_hint"/>
            <EditText
                android:id="@+id/addContents"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="top"
                android:padding="16dp"
                android:background="@drawable/rectangle_edge"
                android:textSize="14sp"
                android:hint="@string/contents_hint"
                android:layout_marginBottom="32dp"/>
        </LinearLayout>
    </LinearLayout>
</layout>